syntax = "proto3";

package lilbattle.v1;

import "google/protobuf/field_mask.proto";
import "lilbattle/v1/models/models.proto";
import "lilbattle/v1/models/world_service.proto";
import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/turnforge/lilbattle/gen/go/lilbattle/v1/services";

// WorldsService manages the world examples catalog
service WorldsService {
  /**
   * Create a new world
   */
  rpc CreateWorld(CreateWorldRequest) returns (CreateWorldResponse) {
    option (google.api.http) = {
      post: "/v1/worlds",
      body: "*",
    };
  }

  /**
   * Batch get multiple worlds by ID
   */
  rpc GetWorlds(GetWorldsRequest) returns (GetWorldsResponse) { 
    option (google.api.http) = {
      get: "/v1/worlds:batchGet"
    };
  }

  // ListWorlds returns all available worlds
  rpc ListWorlds(ListWorldsRequest) returns (ListWorldsResponse) {
    option (google.api.http) = {
      get: "/v1/worlds"
    };
  }

  // GetWorld returns a specific world with metadata
  rpc GetWorld(GetWorldRequest) returns (GetWorldResponse) {
    option (google.api.http) = {
      get: "/v1/worlds/{id}"
    };
  }

  /**
   * Delete a particular world
   */
  rpc DeleteWorld(DeleteWorldRequest) returns (DeleteWorldResponse) { 
    option (google.api.http) = {
      delete: "/v1/worlds/{id=*}"
    };
  }


  // GetWorld returns a specific world with metadata
  rpc UpdateWorld(UpdateWorldRequest) returns (UpdateWorldResponse) {
    option (google.api.http) = {
      patch: "/v1/worlds/{world.id=*}"
      body: "*"
    };
  }
}

